/*
 * CHANGELOG.
 */

10012005 - Added playsound_simple.c.
05302005 - Backport from devtree: Fixed automake nonsense.
11122004 - Backport from devtree: fix .voc decoder crash on file open.
05082004 - Fixed "bootstrap" to work with MacOSX.
05072004 - Backed out some commits, converted repository to Subversion, and
           branched off to a 1.1.0 development tree. Changed MikMod URL...old
           one is now a porn site.  :(
10252003 - VOC decoder was broken. Now it isn't.
10142003 - Build system fix: acinclude.m4 had some word wrapping badness.
10122003 - Fixed "make dist" behaviour to not packaged generated docs, and
           made sure other files are always packaged, regardless of config.
           Upped version to 1.0.1.
10102003 - Changed some SDL_Error()s to __Sound_SetError() in new DLS code
           to fix linking issues.
10052003 - Fixed memory corruption when freeing DLS instruments,
           and bug when timidity is initialized multiple times (Thanks, Sam!).
09252003 - Sam Lantinga added support for DLS instruments to the MIDI decoder.
09132003 - Happy September. Added Speex (.spx) decoder.
08052003 - Fixed MIDI decoder on bigendian systems.
03102003 - Never actually created samplelist_mutex (Thanks, Glenn Maynard!).
01302003 - Patches to make SDL_sound more Visual C happy (Thanks, Eric!).
01122003 - Fix to smpeg.c's rewinding code (Thanks, Eric). Put Visual C 6
           project files in CVS, without external binaries (Thanks, Eric).
12212002 - Fixed ogg.c to decode a full buffer at a time instead of one ogg
           packet per call, and mikmod has a check during initialization to
           prevent a clash with SDL_mixer (Thanks, Eric).
12092002 - Changed Sound_Init()'s call to SDL_Init() to SDL_InitSubSystem(),
           to prevent unwanted use of the SDL parachute (thanks, Glenn).
10092002 - Fixed a "make dist" issue and upped version to 1.0.0! Woohoo!
09302002 - libFLAC broke their API (again!) for version 1.0.4. That was the